# gitru

./: .commit-msg-rule.toml  .commit-msg-rule.yaml  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  _typos.toml  cliff.toml  deny.toml
.github/workflows/: ci.yaml  release.yml  rust_cross_platform_build.yaml
config/: commit-msg-hook-template.sh  commit-msg-rule-template.yaml
src/: cli.rs  constant.rs  lib.rs  main.rs
src/cli/: commit_msg_action.rs  mod.rs
src/commit_msg/: commit_msg_rule.rs  mod.rs
src/commit_msg/config/: body_config.rs  footer_config.rs  mod.rs  scope_config.rs  subject_config.rs  type_config.rs
src/config/: commit_msg_rule.rs  mod.rs
src/error/: body_error.rs  commit_msg_error.rs  footer_error.rs  git_error.rs  git_status.rs  git_status_error.rs  header_error.rs  mod.rs
src/hook/: commit_msg.rs  mod.rs
src/install/: commit_msg_init.rs  commit_msg_install.rs  commit_msg_uninstall.rs  mod.rs
src/parser/: commit_msg.rs  footer.rs  header.rs  mod.rs
src/util/: colored_console.rs  colored_print.rs  git_path.rs  mod.rs  path.rs  tracing_util.rs  windows_color_util.rs
src/validate/: commit_msg_rule.rs  commit_msg_validate.rs  mod.rs
src/validator/: commit_msg.rs  git_status.rs  mod.rs
template/: commit-msg-hook-template.sh  commit-msg-rule-template.toml
