[package]
name = "gitru"
version = "0.1.0"
edition = "2021"
authors = ["xiyi <xiyixiaodao@outlook.com>"]
description = "Git commit message validator with configurable rules"
license = "MIT"
repository = "https://github.com/xiyixiaodao/gitru"
keywords = [
    "git-hooks",
    "conventional-commits",
    "commit-validation",
    "rust-cli",
    "devops-automation",
]
categories = ["development-tools","command-line-utilities"]

[profile.release]
# Enable Link-Time Optimization
lto = true

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "local-time",
    "env-filter",
] }
colored = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.33"
regex = "1.12.3"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "consoleapi",
    "processenv",
    "wincon",
    "winbase",
] }
