[package]
name = "gitru"
version = "0.2.9"
edition = "2021"
authors = ["xiyi <xiyixiaodao@outlook.com>"]
description = "a lightweight, configurable Git commit message validation tool"
license = "MIT"
repository = "https://github.com/xiyixiaodao/gitru"
keywords = [
    "git-hooks",
    "conventional-commits",
    "commit-validation",
    "rust-cli",
    "devops-automation",
]
categories = ["development-tools", "command-line-utilities"]

[profile.release]
# Enable Link-Time Optimization
lto = true

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
git2 = { version = "0.20.4", features = ["vendored-openssl"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
strsim = "0.11.1"
supports-color = "3.0.2"
thiserror = "2.0.18"
toml = "1.0.6"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "consoleapi",
    "processenv",
    "wincon",
    "winbase",
] }


[build-dependencies]
openssl = { version = "0.10.76", features = ["vendored"] }


[dev-dependencies]
tempfile = "3.27.0"
